--- a/magic.html
+++ b/magic.html
@@ -11,8 +11,7 @@
 
 <div id="wrapper">
 	<div id="image">
-		<img id="page" src="imgs/loadingpage.jpg" height="100%" alt="" />
-	</div>
+		<img id="page" src="imgs/loadingpage.jpg" alt="" />
 	<div class="ruler" id="ruler1">
 		<div class="number">1</div>
 		<div class="line"></div>
@@ -24,6 +23,7 @@
 	<div class="ruler" id="ruler3">
 		<div class="number">3</div>
 		<div class="line"></div>
+	</div>
 	</div>
 </div>
 </body>
